@@ -60,22 +60,22 @@ do_test (void)
 
   TEST_VERIFY
     (strcmp (proc.out.buffer,
-"tst-test_compare_string.c:29: error: blob comparison failed\n"
+"tst-test_compare_string.c:29: error: string comparison failed\n"
 "  left string: 0 bytes\n"
 "  right string: NULL\n"
-"tst-test_compare_string.c:30: error: blob comparison failed\n"
+"tst-test_compare_string.c:30: error: string comparison failed\n"
 "  left string: 1 bytes\n"
 "  right string: 0 bytes\n"
 "  left (evaluated from \"X\"):\n"
 "      \"X\"\n"
 "      58\n"
-"tst-test_compare_string.c:31: error: blob comparison failed\n"
+"tst-test_compare_string.c:31: error: string comparison failed\n"
 "  left string: NULL\n"
 "  right string: 1 bytes\n"
 "  right (evaluated from \"X\"):\n"
 "      \"X\"\n"
 "      58\n"
-"tst-test_compare_string.c:32: error: blob comparison failed\n"
+"tst-test_compare_string.c:32: error: string comparison failed\n"
 "  string length: 4 bytes\n"
 "  left (evaluated from \"abcd\"):\n"
 "      \"abcd\"\n"
@@ -83,13 +83,13 @@ do_test (void)
 "  right (evaluated from \"abcD\"):\n"
 "      \"abcD\"\n"
 "      61 62 63 44\n"
-"tst-test_compare_string.c:33: error: blob comparison failed\n"
+"tst-test_compare_string.c:33: error: string comparison failed\n"
 "  left string: 4 bytes\n"
 "  right string: NULL\n"
 "  left (evaluated from \"abcd\"):\n"
 "      \"abcd\"\n"
 "      61 62 63 64\n"
-"tst-test_compare_string.c:34: error: blob comparison failed\n"
+"tst-test_compare_string.c:34: error: string comparison failed\n"
 "  left string: NULL\n"
 "  right string: 4 bytes\n"
 "  right (evaluated from \"abcd\"):\n"
